psad-2.0.4 (01/27/2007):
    - Added Snort rule matches to syslog alerts.  Multiple matches can be
      controlled with new configuration variables in psad.conf:
      ENABLE_SIG_MSG_SYSLOG, SIG_MSG_SYSLOG_THRESHOLD, and
      SIG_SID_SYSLOG_THRESHOLD.
    - Bugfix to include scanned UDP port ranges in syslog alerts.
    - Bugfix to parse SEQ and ACK iptables log message fields (requires
      --log-tcp-sequence on the iptables command line).  This allows the ipEye
      signature to work.
    - Added --debug-sid to allow a specific Snort rule to be debugged while
      psad runs it through its detection engine.  A consequence of this is
      that the -d command line argument must be spelled out, i.e. "psad
      --debug".
    - Bugfix to allow logging prefixes to omit trailing spaces.  This is a bug
      in the iptables logging format to allow this in the first place, but
      before this gets fixed psad needs to compensate.
    - Bugfix for syslog-ng init script path in install.pl.
    - Bugfix to include a "source" definition for /proc/kmsg if not already
      defined for syslog-ng daemons.
    - Minor memory handling bugfixes discovered by valgrind the excellent
      Valgrind project: http://www.valgrind.org

psad-2.0.3 (12/31/2006):
    - Removed Psad.pm perl module and kmsgsd.pl and psadwatchd.pl scripts.
      This is a major change that allows psad to be more flexible and
      completely derive its config from the psad.conf file and from the
      command line.  In the previous scheme, psad imported its config with a
      function within Psad.pm, and this required that psad imported the Psad
      perl module before reading its config. A consequence was that the
      PSAD_LIBS_DIR var could not be specified usefully within the config
      file.
    - Added the ability to recursively resolve embedded variables from *.conf
      files (with a limit of 20 resolution attempts).