@@ -198,7 +198,9 @@ sub chain_rules() {
 
             if ($line =~ m|^\s*(\S+)\s+(\S+)\s+\-\-\s+(\S+)\s+(\S+)\s*(.*)|) {
                 $rule{'target'}   = $1;
-                $rule{'protocol'} = $rule{'proto'} = $2;
+                my $proto = $2;
+                $proto = 'all' if $proto eq '0';
+                $rule{'protocol'} = $rule{'proto'} = $proto;
                 $rule{'src'}      = $3;
                 $rule{'dst'}      = $4;
                 $rule{'extended'} = $5;
@@ -279,6 +281,10 @@ sub default_drop() {
             my $proto  = $1;
             my $p_tmp  = $2;
             my $prefix = 'NONE';
+
+            ### some recent iptables versions return "0" instead of "all"
+            ### for the protocol number
+            $proto = 'all' if $proto eq '0';
             ### LOG flags 0 level 4 prefix `DROP '
             if ($p_tmp && $p_tmp =~ m|LOG.*\s+prefix\s+
                 \`\s*(.+?)\s*\'|x) {
@@ -289,6 +295,8 @@ sub default_drop() {
             $protocols{$proto}{'LOG'}{'rulenum'} = $rule_ctr;
         } elsif ($policy eq 'ACCEPT' and $line =~ m|^DROP\s+(\w+)\s+\-\-\s+.*
             $any_ip_re\s+$any_ip_re\s*$|x) {
+            my $proto = $1;
+            $proto = 'all' if $proto eq '0';
             ### DROP    all  --  0.0.0.0/0     0.0.0.0/0
             $protocols{$1}{'DROP'} = $rule_ctr;
         }
@@ -338,6 +346,7 @@ sub default_log() {
 
     ### first get all logging rules and associated chains
     my $log_chain;
+
     for my $line (@ipt_lines) {
         chomp $line;
 
@@ -352,11 +361,15 @@ sub default_log() {
 
         if ($line =~ m|^\s*U?LOG\s+(\w+)\s+\-\-\s+.*$any_ip_re
                 \s+$any_ip_re\s+.*U?LOG|x) {
+
+            my $proto = $1;
+            $proto = 'all' if $proto eq '0';
+
             ### the above regex allows the limit target to be used
-            $log_chains{$log_chain}{$1} = '';  ### protocol
+            $log_chains{$log_chain}{$proto} = '';  ### protocol
 
             if ($log_chain eq $chain) {
-                $log_rules{$1} = '';
+                $log_rules{$proto} = '';
             }
         }
     }
